--- a/index.html
+++ b/index.html
@@ -4,9 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    <style rel="stylesheet" href="styles.css"></style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+        <div class="sidebar">
+            <div class="dashboard">
+                <div class="dashboard-icon"></div>
+                <div>Dashboard</div>
+            </div>
+            <div class="sidebar-small-icons">
+                <div class="home icon"></div>
+                <div class="home text">Home</div>
+                <div class="profile icon"></div>
+                <div class="profile text">Profile</div>
+                <div class="messages icon"></div>
+                <div class="message text">Message</div>
+                <div class="history icon"></div>
+                <div class="history text">History</div>
+                <div class="tasks icon"></div>
+                <div class="tasks text">Tasks</div>
+                <div class="communities icon"></div>
+                <div class="communities text">Communities</div>
+                <div></div>
+                <div></div>
+                <div class="settings icon"></div>
+                <div class="settings text">Settings</div>
+                <div class="support icon"></div>
+                <div class="support text">Support</div>
+                <div class="privacy icon"></div>
+                <div class="privacy text">Privacy</div>
+            </div>
+        </div>
+        <div class="header">
+            <div class="search-bar">
+                <div class="search-icon"></div>
+                <div class="actual-search-bar"></div>
+                <div class="blank-space"></div>
+                <div class="notif-icon"></div>
+                <div class="mini-pfp"></div>
+                <div class="user-name">Blitz</div>
+            </div>
+            <div class="user">
+                <div class="pfp"></div>
+                <div>
+                    <div class="greetings-text">Hi there,</div>
+                    <div class="user-name-big">Blitz (@goSeahawks)</div>
+                </div>
+                <div class="blank-space"></div>
+                <div class="user-button">New</div>
+                <div class="user-button">Upload</div>
+                <div class="user-button">Share</div>
+            </div>
+        </div>
+        <div class="main"></div>
+    </div>
     
 </body>
 </html>
