--- a/index.html
+++ b/index.html
@@ -1,64 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class="sidebar">
-            <div class="dashboard">
-                <div class="dashboard-icon"></div>
-                <div>Dashboard</div>
-            </div>
-            <div class="sidebar-small-icons">
-                <div class="home icon"></div>
-                <div class="home text">Home</div>
-                <div class="profile icon"></div>
-                <div class="profile text">Profile</div>
-                <div class="messages icon"></div>
-                <div class="message text">Message</div>
-                <div class="history icon"></div>
-                <div class="history text">History</div>
-                <div class="tasks icon"></div>
-                <div class="tasks text">Tasks</div>
-                <div class="communities icon"></div>
-                <div class="communities text">Communities</div>
-                <div></div>
-                <div></div>
-                <div class="settings icon"></div>
-                <div class="settings text">Settings</div>
-                <div class="support icon"></div>
-                <div class="support text">Support</div>
-                <div class="privacy icon"></div>
-                <div class="privacy text">Privacy</div>
-            </div>
+      <div class="sidebar">
+        <div class="dashboard">
+          <div class="dashboard-icon"></div>
+          <div class="text">Dashboard</div>
         </div>
-        <div class="header">
-            <div class="search-bar">
-                <div class="search-icon"></div>
-                <div class="actual-search-bar"></div>
-                <div class="blank-space"></div>
-                <div class="notif-icon"></div>
-                <div class="mini-pfp"></div>
-                <div class="user-name">Blitz</div>
-            </div>
-            <div class="user">
-                <div class="pfp"></div>
-                <div>
-                    <div class="greetings-text">Hi there,</div>
-                    <div class="user-name-big">Blitz (@goSeahawks)</div>
+        <div class="sidebar-small-icons">
+          <div class="home icon"></div>
+          <div class="home text">Home</div>
+          <div class="profile icon"></div>
+          <div class="profile text">Profile</div>
+          <div class="messages icon"></div>
+          <div class="message text">Message</div>
+          <div class="history icon"></div>
+          <div class="history text">History</div>
+          <div class="tasks icon"></div>
+          <div class="tasks text">Tasks</div>
+          <div class="communities icon"></div>
+          <div class="communities text">Communities</div>
+          <div></div>
+          <div></div>
+          <div class="settings icon"></div>
+          <div class="settings text">Settings</div>
+          <div class="support icon"></div>
+          <div class="support text">Support</div>
+          <div class="privacy icon"></div>
+          <div class="privacy text">Privacy</div>
+        </div>
+      </div>
+      <div class="header">
+        <div class="search-bar">
+          <div class="search-icon"></div>
+          <div class="actual-search-bar"></div>
+          <div class="blank-space"></div>
+          <div class="notif-icon"></div>
+          <div class="mini-pfp"></div>
+          <div class="user-name">Blitz</div>
+        </div>
+        <div class="user">
+          <div class="pfp"></div>
+          <div>
+            <div class="greetings-text">Hi there,</div>
+            <div class="user-name-big">Blitz (@goseahawks)</div>
+          </div>
+          <div class="blank-space"></div>
+          <div class="user-button">New</div>
+          <div class="user-button">Upload</div>
+          <div class="user-button">Share</div>
+        </div>
+      </div>
+      <div class="main">
+        <div class="projects">
+          <div class="subheading">Agenda</div>
+          <div class="projects-cluster">
+            <div class="project">
+              <div class="bar"></div>
+              <div class="project-content">
+                <div class="text-header">Mascot Practice</div>
+                <div class="text-p">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptatum esse hic laborum nulla, at ipsam eligendi expedita
+                  accusamus, accusantium, repudiandae odit a ut nemo ab et?
+                  Necessitatibus porro molestiae nisi?
                 </div>
-                <div class="blank-space"></div>
-                <div class="user-button">New</div>
-                <div class="user-button">Upload</div>
-                <div class="user-button">Share</div>
+              </div>
             </div>
+            <div class="project">
+              <div class="bar"></div>
+              <div class="project-content">
+                <div class="text-header">Helmet Fitting</div>
+                <div class="text-p">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptatum esse hic laborum nulla, at ipsam eligendi expedita
+                  accusamus, accusantium, repudiandae odit a ut nemo ab et?
+                  Necessitatibus porro molestiae nisi?
+                </div>
+              </div>
+            </div>
+            <div class="project">
+              <div class="bar"></div>
+              <div class="project-content">
+                <div class="text-header">Lunch with Geno</div>
+                <div class="text-p">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptatum esse hic laborum nulla, at ipsam eligendi expedita
+                  accusamus, accusantium, repudiandae odit a ut nemo ab et?
+                  Necessitatibus porro molestiae nisi?
+                </div>
+              </div>
+            </div>
+            <div class="project">
+              <div class="bar"></div>
+              <div class="project-content">
+                <div class="text-header">Gym Workout</div>
+                <div class="text-p">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptatum esse hic laborum nulla, at ipsam eligendi expedita
+                  accusamus, accusantium, repudiandae odit a ut nemo ab et?
+                  Necessitatibus porro molestiae nisi?
+                </div>
+              </div>
+            </div>
+            <div class="project">
+              <div class="bar"></div>
+              <div class="project-content">
+                <div class="text-header">Cheer Training</div>
+                <div class="text-p">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptatum esse hic laborum nulla, at ipsam eligendi expedita
+                  accusamus, accusantium, repudiandae odit a ut nemo ab et?
+                  Necessitatibus porro molestiae nisi?
+                </div>
+              </div>
+            </div>
+            <div class="project">
+              <div class="bar"></div>
+              <div class="project-content">
+                <div class="text-header">O-Line Tryouts</div>
+                <div class="text-p">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptatum esse hic laborum nulla, at ipsam eligendi expedita
+                  accusamus, accusantium, repudiandae odit a ut nemo ab et?
+                  Necessitatibus porro molestiae nisi?
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="main"></div>
+        <div class="announcements">
+          <div class="subheading">Announcements</div>
+          <div class="box">
+            <div class="announce">
+              <div class="text-header">Week 17 @ Chicago</div>
+              <div class="text-p">Kickoff at 5:15 PM on Thursday (12/26).</div>
+              <div class="line"></div>
+              <div class="text-header">Week 18 @ Los Angeles</div>
+              <div class="text-p">Sunday (1/5), kickoff TBD.</div>
+              <div class="line"></div>
+              <div class="text-header">Playoffs?</div>
+              <div class="text-p">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="trending">
+          <div class="subheading">Friends</div>
+          <div class="box">
+            <div class="friend-user">
+              <div class="dk-pfp"></div>
+              <div>DK Metcalf</div>
+            </div>
+            <div class="friend-user">
+              <div class="geno-pfp"></div>
+              <div>Geno Smith</div>
+            </div>
+            <div class="friend-user">
+              <div class="devon-pfp"></div>
+              <div>Devon Witherspoon</div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    
-</body>
+  </body>
 </html>
